--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "allotment": "^1.20.0",
     "antd": "^5.10.0",
     "lodash": "^4.17.21",
